[DeleteJob] Use a separate worker thread to run actual IO operation

Summary:
BUG: 390748
FIXED-IN: 5.65

Reviewers: dfaure, #frameworks

Reviewed By: dfaure

Subscribers: kde-frameworks-devel

Tags: #frameworks

Maniphest Tasks: T11627

Differential Revision: https://phabricator.kde.org/D24962